# CGBN

./: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  README_ORIG.md  cuda-caps.cu
benchmark/: gpu_support.h  xmp_test_powm.cu  xmp_tester.cu  xmp_tests.cu
docs/: CGBN.md  CHANGELOG.md  README.md
include/cgbn/: arith.cuh  c_api.cc  c_api.h  cgbn.cu  cgbn.cuh  cgbn.h  cgbn_cpu.h  cgbn_cuda.cuh  cgbn_cuda.h  cgbn_mpz.h  cgbn_types.cuh  core.cuh  error_report.cu  error_report.cuh  impl_cuda.cu  impl_cuda.cuh  impl_mpz.cc
include/cgbn/arith/: arith.cuh  arith.h  asm.cuh  chain.cuh  dmp.cuh  math.cuh  mp.cuh  shifter.cuh  static_divide.cuh
include/cgbn/core/: core.cu  core.cuh  core_add_sub.cuh  core_binary_inverse.cuh  core_compare.cuh  core_counting.cuh  core_divide_multi.cuh  core_divide_single.cuh  core_gcd.cuh  core_insert_extract.cuh  core_logical.cuh  core_modular_inverse.cuh  core_mont.cuh  core_mont_imad.cuh  core_mont_wmad.cuh  core_mont_xmad.cuh  core_mul.cuh  core_mul_imad.cuh  core_mul_wmad.cuh  core_mul_xmad.cuh  core_short_math.cuh  core_singleton.cuh  core_sqrt_multi.cuh  core_sqrt_single.cuh  dispatch_dlimbs.cuh  dispatch_masking.cuh  dispatch_padding.cuh  dispatch_resolver.cu  dispatch_resolver.cuh  dispatch_shift_rotate.cuh  padded_resolver.cuh  subwarp_resolver.cuh  unpadded.cuh  warp_resolver.cuh
perf_tests/: Makefile
samples/: Makefile
samples/sample_01_add/: Makefile  add.cu
samples/sample_02_modinv/: Makefile  modinv_odd.cu
samples/sample_02_modinv_faster/: modinv_odd_faster.cu
samples/sample_03_powm/: Makefile  powm_odd.cu
samples/sample_04_miller_rabin/: Makefile  miller_rabin.cu
samples/utility/: gpu_support.h
unit_tests/: Makefile  all_cases.cuh  common.cuh  sizes.h  testcase_common.cuh  tester.cu  testsuite_cgbn1.cu  testsuite_cgbn2.cu  testsuite_cgbn3.cu  testsuite_cgbn4.cu  testsuite_cgbn5.cu  types.h  unit_test.cuh  unit_test_cgbn1.cu  unit_test_cgbn2345.cu  unit_tests.cc
unit_tests/cases/: accumulator_1.cuh  accumulator_2.cuh  add.cuh  add_ui32.cuh  all_equals_ui32_1.cuh  all_equals_ui32_2.cuh  all_set_ui32.cuh  barrett_div.cuh  barrett_div_rem.cuh  barrett_div_rem_wide.cuh  barrett_div_wide.cuh  barrett_rem.cuh  barrett_rem_wide.cuh  binary_inverse.cuh  binary_inverse_ui32.cuh  bitwise_and.cuh  bitwise_complement.cuh  bitwise_ior.cuh  bitwise_mask_and.cuh  bitwise_mask_copy.cuh  bitwise_mask_ior.cuh  bitwise_mask_select.cuh  bitwise_mask_xor.cuh  bitwise_select.cuh  bitwise_xor.cuh  bn2mont.cuh  clz.cuh  compare_1.cuh  compare_2.cuh  compare_3.cuh  compare_4.cuh  compare_ui32_1.cuh  compare_ui32_2.cuh  ctz.cuh  div.cuh  div_rem.cuh  div_rem_wide.cuh  div_ui32.cuh  div_wide.cuh  equals_1.cuh  (+43 more)
unit_tests/tests/: accumulator_1.cuh  accumulator_2.cuh  add.cuh  add_ui32.cuh  all_equals_ui32_1.cuh  all_equals_ui32_1.h  all_equals_ui32_2.cuh  all_equals_ui32_2.h  all_set_ui32.cuh  all_set_ui32.h  barrett_div.cuh  barrett_div_rem.cuh  barrett_div_rem_wide.cuh  barrett_div_wide.cuh  barrett_rem.cuh  barrett_rem_wide.cuh  binary_inverse.cuh  binary_inverse_ui32.cuh  bitwise_and.cuh  bitwise_complement.cuh  bitwise_ior.cuh  bitwise_mask_and.cuh  bitwise_mask_copy.cuh  bitwise_mask_ior.cuh  bitwise_mask_select.cuh  bitwise_mask_xor.cuh  bitwise_select.cuh  bitwise_xor.cuh  bn2mont.cuh  clz.cuh  compare_1.cuh  compare_2.cuh  compare_3.cuh  compare_4.cuh  compare_ui32_1.cuh  compare_ui32_2.cuh  ctz.cuh  div.cuh  div_rem.cuh  div_rem_wide.cuh  (+47 more)
